--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
-MANIFEST
-MANIFEST.bak
-META.yml
-Makefile
-inc/
-MooseX-SimpleConfig-*
-Makefile.old
-blib/
-pm_to_blib
-
+/.build/
+!.gitignore
+/MooseX-SimpleConfig-*
