use Test::Requires here (forces requirement for authors)

--- a/dist.ini
+++ b/dist.ini
@@ -9,6 +9,11 @@ copyright_year = 2007
 server = github
 Authority.authority = cpan:STEVAN
 
+[Prereqs / DevelopRequires]
+Config::General = 0
+YAML = 0
+YAML::Syck = 0
+
 [RemovePrereqs]
 remove = MXDefaultConfigTestBase
 remove = MXDriverArgsConfigTestBase
