the usenet group is dead - point to the lists.perl.org list instead

--- a/dist.ini
+++ b/dist.ini
@@ -21,7 +21,7 @@ remove = MXSimpleConfigTestBase
 
 [MetaResources]
 x_IRC = irc://irc.perl.org/#moose
-x_MailingList = http://news.gmane.org/gmane.comp.lang.perl.moose
+x_MailingList = http://http://lists.perl.org/list/moose.html
 
 ; authordep Pod::Weaver::Section::Contributors
 
