--- a/dist.ini
+++ b/dist.ini
@@ -23,6 +23,7 @@ remove = MXSimpleConfigTestBase
 x_IRC = irc://irc.perl.org/#moose
 x_MailingList = http://http://lists.perl.org/list/moose.html
 
+; authordep Pod::Weaver = 4
 ; authordep Pod::Weaver::Section::Contributors
 
 [ContributorsFromGit]
