now using [Git::Contributors]

--- a/dist.ini
+++ b/dist.ini
@@ -5,7 +5,7 @@ copyright_holder = Brandon L. Black <blblack@gmail.com>
 copyright_year = 2007
 
 [@Author::ETHER]
-:version = 0.039
+:version = 0.068
 server = github
 Authority.authority = cpan:STEVAN
 
@@ -24,6 +24,4 @@ x_IRC = irc://irc.perl.org/#moose
 x_MailingList = http://http://lists.perl.org/list/moose.html
 
 ; authordep Pod::Weaver = 4
-; authordep Pod::Weaver::Section::Contributors
-
-[ContributorsFromGit]
+; authordep Pod::Weaver::Section::Contributors = 0.008
