run moose-outdated in tests

--- a/dist.ini
+++ b/dist.ini
@@ -8,6 +8,7 @@ copyright_year = 2007
 :version = 0.068
 server = github
 Authority.authority = cpan:STEVAN
+Test::ReportPrereqs.include = Dist::CheckConflicts
 
 [Prereqs / DevelopRequires]
 Config::General = 0
@@ -25,3 +26,6 @@ x_MailingList = http://http://lists.perl.org/list/moose.html
 
 ; authordep Pod::Weaver = 4
 ; authordep Pod::Weaver::Section::Contributors = 0.008
+
+[Test::CheckBreaks]
+conflicts_module = Moose::Conflicts
