add a clean namespaces test

--- a/dist.ini
+++ b/dist.ini
@@ -29,3 +29,5 @@ x_MailingList = http://http://lists.perl.org/list/moose.html
 
 [Test::CheckBreaks]
 conflicts_module = Moose::Conflicts
+
+[Test::CleanNamespaces]
