--- a/dist.ini
+++ b/dist.ini
@@ -22,7 +22,7 @@ remove = MXSimpleConfigTestBase
 
 [MetaResources]
 x_IRC = irc://irc.perl.org/#moose
-x_MailingList = http://http://lists.perl.org/list/moose.html
+x_MailingList = http://lists.perl.org/list/moose.html
 
 ; authordep Pod::Weaver = 4
 ; authordep Pod::Weaver::Section::Contributors = 0.008
