--- a/dist.ini
+++ b/dist.ini
@@ -5,8 +5,8 @@ copyright_holder = Brandon L. Black <blblack@gmail.com>
 copyright_year = 2007
 
 [@Author::ETHER]
-:version = 0.094
-Authority.authority = cpan:STEVAN
+:version = 0.117
+authority = cpan:STEVAN
 Test::ReportPrereqs.include = Dist::CheckConflicts
 Test::MinimumVersion.max_target_perl = 5.008003
 
